--- a/ansible/playbooks/deploy-cluster.yml
+++ b/ansible/playbooks/deploy-cluster.yml
@@ -6,9 +6,9 @@
   gather_facts: false
   become: yes
   roles:
-    - ../pre-ansible
+    - ../../pre-ansible
   tags:
-    - ../pre-ansible
+    - ../../pre-ansible
 
 # Install etcd
 - include: deploy-etcd.yml
