--- a/ansible/playbooks/deploy-cluster.yml
+++ b/ansible/playbooks/deploy-cluster.yml
@@ -6,7 +6,7 @@
   gather_facts: false
   become: yes
   roles:
-    - ../../pre-ansible
+    - ../roles/pre-ansible
   tags:
     - ../../pre-ansible
 
