--- a/ansible/playbooks/deploy-cluster.yml
+++ b/ansible/playbooks/deploy-cluster.yml
@@ -8,7 +8,7 @@
   roles:
     - ../roles/pre-ansible
   tags:
-    - ../../pre-ansible
+    - pre-ansible
 
 # Install etcd
 - include: deploy-etcd.yml
