--- a/ansible/playbooks/deploy-docker.yml
+++ b/ansible/playbooks/deploy-docker.yml
@@ -3,7 +3,7 @@
 - hosts: all
   become: yes
   roles:
-    - common
-    - docker
+    - ../roles/common
+    - ../roles/docker
   tags:
     - docker
