--- a/ansible/playbooks/deploy-master.yml
+++ b/ansible/playbooks/deploy-master.yml
@@ -4,6 +4,6 @@
   become: yes
   roles:
     - { role: etcd-certs, when: apiserver_etcd_use_certs|default(false) }
-    - master
+    - ../roles/master
   tags:
     - masters
