--- a/ansible/playbooks/deploy-cluster.yml
+++ b/ansible/playbooks/deploy-cluster.yml
@@ -22,8 +22,8 @@
     - nodes
   become: yes
   roles:
-    - { role: etcd-certs, when: flannel_etcd_use_certs|default(false) }
-    - { role: flannel, when: networking == 'flannel' }
+    - { role: ../roles/etcd-certs, when: flannel_etcd_use_certs|default(false) }
+    - { role: ../roles/flannel, when: networking == 'flannel' }
   tags:
     - network-service-install
 
@@ -31,7 +31,7 @@
 - hosts: all
   become: yes
   roles:
-    - { role: opencontrail, when: networking == 'opencontrail'}
+    - { role: ../roles/opencontrail, when: networking == 'opencontrail'}
   tags:
     - network-service-install
 
@@ -39,7 +39,7 @@
 - hosts: masters
   become: yes
   roles:
-    - { role: contiv, contiv_role: netmaster, when: networking == 'contiv' }
+    - { role: ../roles/contiv, contiv_role: netmaster, when: networking == 'contiv' }
 
 # install kube master services
 - include: deploy-master.yml
@@ -56,7 +56,7 @@
     - nodes
   become: yes
   roles:
-    - { role: opencontrail-provision, when: networking == 'opencontrail' }
+    - { role: ../roles/opencontrail-provision, when: networking == 'opencontrail' }
   tags:
     - network-service-config
 
@@ -64,4 +64,4 @@
 - hosts: nodes
   become: yes
   roles:
-    - { role: contiv, contiv_role: netplugin, when: networking == 'contiv' }
+    - { role: ../roles/contiv, contiv_role: netplugin, when: networking == 'contiv' }
