--- a/ansible/roles/kubernetes/defaults/main.yml
+++ b/ansible/roles/kubernetes/defaults/main.yml
@@ -1,5 +1,5 @@
 # Version of Kubernetes binaries
-kube_version: 1.6.2
+kube_version: 0.0.1.7.0-alpha.0
 
 # Set source of kubernetes binaries
 # Available: packageManager, localBuild, github-release, distribution-rpm
