--- a/ansible/roles/kubernetes/defaults/main.yml
+++ b/ansible/roles/kubernetes/defaults/main.yml
@@ -3,7 +3,7 @@ kube_version: 0.0.1.7.0-alpha.0
 
 # Set source of kubernetes binaries
 # Available: packageManager, localBuild, github-release, distribution-rpm
-kube_source_type: packageManager
+kube_source_type: github-release
 
 # The port that the Kubernetes apiserver component listens on.
 kube_master_api_port: 443
