--- a/ansible/roles/kubernetes/defaults/main.yml
+++ b/ansible/roles/kubernetes/defaults/main.yml
@@ -1,12 +1,12 @@
 # Version of Kubernetes binaries
-kube_version: 0.0.1.7.0-alpha.0
+kube_version: 1.6.2
 
 # Set source of kubernetes binaries
 # Available: packageManager, localBuild, github-release, distribution-rpm
 kube_source_type: github-release
 
 # The port that the Kubernetes apiserver component listens on.
-kube_master_api_port: 443
+kube_master_api_port: 8443
 
 # This directory is where all the additional scripts go
 # that Kubernetes normally puts in /srv/kubernetes.
